# container-infra

./: .gitignore  README.md  monitor.sh  status.sh
.claude/skills/apple-container-infra/: SKILL.md
container-firecrawl/: .env.example  README.md  firecrawl-dev.sh  firecrawl.conf
container-google-tasks/: .env.example  Dockerfile  README.md  config.yaml  google-tasks-dev.sh  requirements.txt
container-google-tasks/src/: auth.py  google_tasks.py  server.py
container-grafana/: README.md  datasources.yaml  grafana-dev.sh
container-image-scan/: .dockerignore  .env.example  Dockerfile  README.md  config.yaml  conftest.py  image-scan-dev.sh  pyproject.toml  requirements.txt
container-image-scan/src/: scanner.py  server.py  vlm.py
container-image-scan/tests/: test_scanner.py  test_server.py  test_vlm.py
container-litellm/: .env.example  README.md  config.yaml  litellm-dev.sh
container-otel-collector/: README.md  otel-collector-dev.sh  otel-collector.yaml
container-playwright/: README.md  playwright-dev.sh  playwright.conf
container-postgres/: README.md  postgres-dev.sh  postgresql.conf
container-prometheus/: README.md  prometheus-dev.sh  prometheus.yml
container-rabbitmq/: .env.example  README.md  rabbitmq-dev.sh  rabbitmq.conf
container-redis/: .gitignore  README.md  redis-dev.sh  redis.conf
container-redis/.claude/: settings.local.json
container-tempo/: README.md  tempo-dev.sh  tempo.yaml
