[project]
name = "container-image-scan"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "ultralytics>=8.3.0",
    "litellm>=1.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
